# ats2-floattypes

./: .hgignore  Makefile.am  Makefile.in  README  aclocal.m4  ats2-floattypes.pc.in  common-definitions.m4.in  common-macros.m4.in  configure  configure.ac
examples/: GNUmakefile.in  README.in  arr2.dats.in  arr2.sats.in  array2d.dats.in  array2d.sats.in  decimal-example1.dats.in  proofs.dats.in  proofs.sats.in  tql2-example.dats.in  tql2-example1.dats.in  tql2-example2.dats.in  tql2-example3.dats.in  tql2-example4.dats.in  tql2.dats.in  tql2.sats.in  tred2-example.dats.in  tred2-example1.dats.in  tred2-example2.dats.in  tred2-example3.dats.in  tred2-example4.dats.in  tred2.dats.in  tred2.sats  tred2.sats.in
floattypes/: common-macros.m4.in
floattypes/CATS/: constants.cats.m4  defines.cats.m4  floattypes.cats.m4  printing.cats.m4
floattypes/DATS/: floattypes.dats.m4
floattypes/HATS/: config.hats.in  floattypes.hats
floattypes/SATS/: floattypes.sats.m4
tests/: test-M_1_PI.dats.m4  test-M_2_PI.dats.m4  test-M_2_SQRTPI.dats.m4  test-M_E.dats.m4  test-M_EULER.dats.m4  test-M_LN10.dats.m4  test-M_LN2.dats.m4  test-M_LNPI.dats.m4  test-M_LOG10E.dats.m4  test-M_LOG2E.dats.m4  test-M_PI.dats.m4  test-M_PI_2.dats.m4  test-M_PI_4.dats.m4  test-M_SQRT1_2.dats.m4  test-M_SQRT2.dats.m4  test-M_SQRT3.dats.m4  test-M_SQRTPI.dats.m4  test-__builtin_fma.dats.m4  test-__builtin_huge_val.dats.m4  test-__builtin_inf.dats.m4  test-__builtin_nans.dats.m4  test-abs.dats.m4  test-acos.dats.m4  test-acosh.dats.m4  test-asin.dats.m4  test-asinh.dats.m4  test-atan.dats.m4  test-atan2.dats.m4  test-atanh.dats.m4  test-binary-arith.dats.m4  test-cbrt.dats.m4  test-ceil.dats.m4  test-compare.dats.m4  test-comparison-ops.dats.m4  test-copysign.dats.m4  test-cos.dats.m4  test-cosh.dats.m4  test-erf.dats.m4  test-erfc.dats.m4  test-exponentials.dats.m4  (+67 more)
